<?xml version="1.0"?>
<package format="3">
  <name>motor_node</name>
  <version>0.0.1</version>
  <description>Motor control node that reads motor commands from topic.</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <!-- Dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <!-- Export -->
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
